# uuwid

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
uuwid/: __init__.py  __main__.py  cli.py  core.py  core_module.py  words.py  words.txt
uuwid/tests/: test_core.py
